add crud loginuser history,userinfo,service logout
