# src/api.yaml
@@ -56,6 +56,57 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AdminLoginMessage'
+  /api/v1/user/info:
+    get:
+      summary: Get user information
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: User information retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserInfo'
+  /api/v1/user/login-history:
+    get:
+      summary: Get user login history
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: query
+          name: username
+          schema:
+            type: string
+          required: true
+          description: The username to retrieve login history for
+      responses:
+        '200':
+          description: User login history retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserLoginHistoryDTO'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "User with username {username} not found"
+  /api/v1/user/logout:
+    post:
+      summary: Logout user
+      responses:
+        '200':
+          description: User logged out successfully
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "User logged out successfully"
 components:
   schemas:
     UserDTO:
@@ -119,3 +170,33 @@ components:
       required:
         - message
         - status
+    UserInfo:
+      type: object
+      properties:
+        username:
+          type: string
+        userLastName:
+          type: string
+        email:
+          type: string
+        phoneNumber:
+          type: string
+        address:
+          type: string
+      required:
+        - username
+        - userLastName
+        - email
+        - phoneNumber
+        - address
+    UserLoginHistoryDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+        loginTime:
+          type: string
+          format: date-time
+      required:
+        - id
+        - loginTime
