# src/main/java/com/hei/dreamtip/Entity/UserLoginHistory.java
@@ -1,0 +1,57 @@
+package com.hei.dreamtip.Entity;
+
+
+import jakarta.persistence.*;
+
+import java.time.LocalDateTime;
+
+@Entity
+@Table(name = "loginhistory")
+public class UserLoginHistory {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id_loginhistory")
+    private Long id;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "id_user", nullable = false)
+    private User user;
+
+    @Column(name = "logintime", nullable = false)
+    private LocalDateTime loginTime;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public User getUser() {
+        return user;
+    }
+
+    public void setUser(User user) {
+        this.user = user;
+    }
+
+    public LocalDateTime getLoginTime() {
+        return loginTime;
+    }
+
+    public void setLoginTime(LocalDateTime loginTime) {
+        this.loginTime = loginTime;
+    }
+
+    @Override
+    public String toString() {
+        return "UserLoginHistory{" +
+                "id=" + id +
+                ", user=" + user +
+                ", loginTime=" + loginTime +
+                '}';
+    }
+    // Getters and setters
+}
