# src/main/java/com/hei/dreamtip/dto/UserInfoDTO.java
@@ -1,0 +1,67 @@
+package com.hei.dreamtip.dto;
+
+public class UserInfoDTO {
+    private String username;
+    private String userLastName;
+    private String email;
+    private String phoneNumber;
+    private String address;
+
+    public UserInfoDTO() {
+    }
+
+    public UserInfoDTO(String username, String userLastName, String email, String phoneNumber, String address) {
+    }
+
+    public String getUsername() {
+        return username;
+    }
+
+    public void setUsername(String username) {
+        this.username = username;
+    }
+
+    public String getUserLastName() {
+        return userLastName;
+    }
+
+    public void setUserLastName(String userLastName) {
+        this.userLastName = userLastName;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getPhoneNumber() {
+        return phoneNumber;
+    }
+
+    public void setPhoneNumber(String phoneNumber) {
+        this.phoneNumber = phoneNumber;
+    }
+
+    public String getAddress() {
+        return address;
+    }
+
+    public void setAddress(String address) {
+        this.address = address;
+    }
+// Getters and setters
+
+    @Override
+    public String toString() {
+        return "UserInfoDTO{" +
+                "username='" + username + '\'' +
+                ", userLastName='" + userLastName + '\'' +
+                ", email='" + email + '\'' +
+                ", phoneNumber='" + phoneNumber + '\'' +
+                ", address='" + address + '\'' +
+                '}';
+    }
+}
